<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_nav2_route_demo</name>
  <version>0.1.0</version>
  <description>Demo configuration package for the RMF ↔ Nav2 Route synchronization demo.</description>
  <maintainer email="aleksa.kostic@ait.ac.at">Aleksa Kostic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>free_fleet_examples</exec_depend>
  <exec_depend>rmf_visualization</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
